feat: implement profile management, country reference, Redis configuration, and leaderboard SSE services